--- a/apps/docs/content/docs/adapters/db-turso.mdx
+++ b/apps/docs/content/docs/adapters/db-turso.mdx
@@ -118,7 +118,7 @@ TURSO_AUTH_TOKEN=your-auth-token
 
 ### Edge Locations
 
-Turso replicates your database to edge locations worldwide. Your Converge data benefits from:
+Turso replicates your database to edge locations worldwide. Your RippleDB data benefits from:
 
 - Low-latency reads from nearby replicas
 - Automatic failover
