--- a/apps/docs/content/docs/adapters/index.mdx
+++ b/apps/docs/content/docs/adapters/index.mdx
@@ -9,7 +9,7 @@ import { Diagram } from '@/components/diagram';
 
 # Adapters
 
-Converge uses adapters to integrate with different databases and ORMs. There are two types:
+RippleDB uses adapters to integrate with different databases and ORMs. There are two types:
 
 1. **Database Adapters (`db-*`)** — Store the change log and handle append/pull
 2. **Materializers (`materialize-*`)** — Project changes into domain tables
