--- a/apps/docs/content/docs/reference/remote-http.mdx
+++ b/apps/docs/content/docs/reference/remote-http.mdx
@@ -5,7 +5,7 @@ description: HTTP transport for client-server sync
 
 # @rippledb/remote-http
 
-HTTP transport implementation of the `Remote` interface. Connects clients to Converge servers over HTTP.
+HTTP transport implementation of the `Remote` interface. Connects clients to RippleDB servers over HTTP.
 
 ## Installation
 
