--- a/apps/docs/content/docs/reference/index.mdx
+++ b/apps/docs/content/docs/reference/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: API Reference
-description: Complete API documentation for all Converge packages
+description: Complete API documentation for all RippleDB packages
 ---
 
 import { Cards, Card } from 'fumadocs-ui/components/card';
@@ -8,7 +8,7 @@ import { Diagram } from '@/components/diagram';
 
 # API Reference
 
-Complete API documentation for all Converge packages.
+Complete API documentation for all RippleDB packages.
 
 ## Core Packages
 
