fix(docs): correct terminology in ADR documents
- Update instances of "deterministic convergence" to "deterministic rippledbnce" for consistency across ADRs.
- Ensure clarity in the context sections of ADR 0001 and ADR 0002 regarding RippleDB's functionality.

--- a/apps/docs/content/docs/internal/adr/0001-local-storage-source-of-truth.mdx
+++ b/apps/docs/content/docs/internal/adr/0001-local-storage-source-of-truth.mdx
@@ -9,7 +9,7 @@ Accepted
 
 ## Context
 
-RippleDB is intended to support offline-first and multi-user applications. The system must remain correct when the network is unavailable and must converge deterministically across replicas.
+RippleDB is intended to support offline-first and multi-user applications. The system must remain correct when the network is unavailable and must rippledb deterministically across replicas.
 
 A decision is required on whether canonical state lives:
 
