--- a/apps/docs/content/docs/internal/adr/0002-log-based-replication.mdx
+++ b/apps/docs/content/docs/internal/adr/0002-log-based-replication.mdx
@@ -9,7 +9,7 @@ Accepted
 
 ## Context
 
-To support offline usage, partial connectivity, and deterministic convergence, replicas must synchronize changes reliably.
+To support offline usage, partial connectivity, and deterministic rippledbnce, replicas must synchronize changes reliably.
 
 State-based sync (sending full snapshots) complicates conflict resolution and recovery.
 
