--- a/apps/docs/content/docs/internal/adr/0003-field-level-lww-hlc.mdx
+++ b/apps/docs/content/docs/internal/adr/0003-field-level-lww-hlc.mdx
@@ -32,7 +32,7 @@ wallMs:counter:nodeId
 
 ## Consequences
 
-- Deterministic convergence
+- Deterministic rippledbnce
 - Reduced conflict scope
 - Increased schema verbosity (tags per field)
 - Requires careful delete modeling (tombstones)
