--- a/apps/docs/content/docs/adapters/index.mdx
+++ b/apps/docs/content/docs/adapters/index.mdx
@@ -151,9 +151,9 @@ Bindings wire RippleDB's `DbEvent`s to UI cache invalidation. When your Store ap
 
 <Cards>
   <Card
-    title="bind-tanstack"
+    title="bind-tanstack-query"
     description="TanStack Query invalidation binding (React, Vue, Solid, Svelte)"
-    href="/docs/adapters/bind-tanstack"
+    href="/docs/adapters/bind-tanstack-query"
   />
 </Cards>
 
