--- a/apps/docs/content/docs/getting-started/index.mdx
+++ b/apps/docs/content/docs/getting-started/index.mdx
@@ -95,7 +95,7 @@ yarn add @rippledb/core @rippledb/client @rippledb/remote-http
 | `@rippledb/materialize-db` | SQL-based state materializer (raw SQL) | [/docs/adapters/materialize-db](/docs/adapters/materialize-db) |
 | `@rippledb/materialize-drizzle` | Drizzle-based state materializer (type-safe) | [/docs/adapters/materialize-drizzle](/docs/adapters/materialize-drizzle) |
 | `@rippledb/store-memory` | In-memory Store implementation (tests) | [/docs/adapters/store-memory](/docs/adapters/store-memory) |
-| `@rippledb/bind-tanstack` | TanStack Query cache invalidation binding | [/docs/adapters/bind-tanstack](/docs/adapters/bind-tanstack) |
+| `@rippledb/bind-tanstack-query` | TanStack Query cache invalidation binding | [/docs/adapters/bind-tanstack-query](/docs/adapters/bind-tanstack-query) |
 | `@rippledb/client-controllers` | Abstract CRUD controllers with batch loading | [/docs/adapters/controllers](/docs/adapters/controllers) |
 
 ## TypeScript
