--- a/apps/docs/content/docs/internal/adr/0018-package-names-and-responsibilities.mdx
+++ b/apps/docs/content/docs/internal/adr/0018-package-names-and-responsibilities.mdx
@@ -41,7 +41,7 @@ Recommended initial package set:
 
 ### UI bindings
 
-- `@rippledb/bind-tanstack` — invalidation wiring + list registry + coalescing
+- `@rippledb/bind-tanstack-query` — invalidation wiring + list registry + coalescing
 
 ### Future (not v0)
 
