--- a/apps/docs/content/docs/internal/architecture/package-structure.mdx
+++ b/apps/docs/content/docs/internal/architecture/package-structure.mdx
@@ -44,7 +44,7 @@ If the names don’t encode this split, contributors will mix responsibilities a
 
 ### UI bindings (optional)
 
-- `@rippledb/bind-tanstack`
+- `@rippledb/bind-tanstack-query`
   - DbEvent → invalidateQueries, list registry, invalidation coalescing
 
 ## Dependency graph (must hold)
