feat: add client-query package combining controllers + tanstack-query
- Create @rippledb/client-query package
- Implement createClientQueryApi using runtime SchemaDescriptor
- Add comprehensive tests
- Update documentation and navigation

--- a/apps/docs/content/docs/getting-started/index.mdx
+++ b/apps/docs/content/docs/getting-started/index.mdx
@@ -97,6 +97,7 @@ yarn add @rippledb/core @rippledb/client @rippledb/remote-http
 | `@rippledb/store-memory` | In-memory Store implementation (tests) | [/docs/adapters/store-memory](/docs/adapters/store-memory) |
 | `@rippledb/bind-tanstack-query` | TanStack Query cache invalidation binding | [/docs/adapters/bind-tanstack-query](/docs/adapters/bind-tanstack-query) |
 | `@rippledb/client-controllers` | Abstract CRUD controllers with batch loading | [/docs/adapters/controllers](/docs/adapters/controllers) |
+| `@rippledb/client-query` | Final DX: controllers + TanStack Query invalidation | [/docs/reference/client-query](/docs/reference/client-query) |
 
 ## TypeScript
 
