--- a/apps/docs/content/docs/reference/index.mdx
+++ b/apps/docs/content/docs/reference/index.mdx
@@ -29,6 +29,11 @@ Complete API documentation for all RippleDB packages.
     href="/docs/reference/client"
   />
   <Card 
+    title="@rippledb/client-query" 
+    description="Final DX: controllers + TanStack Query invalidation"
+    href="/docs/reference/client-query"
+  />
+  <Card 
     title="@rippledb/remote-http" 
     description="HTTP transport for client-server sync"
     href="/docs/reference/remote-http"
