docs: refine package docs + diagram

--- a/apps/docs/content/docs/adapters/bind-tanstack-query.mdx
+++ b/apps/docs/content/docs/adapters/bind-tanstack-query.mdx
@@ -10,6 +10,10 @@ import { Callout } from 'fumadocs-ui/components/callout';
 
 Wire RippleDB `DbEvent`s to [TanStack Query](https://tanstack.com/query) cache invalidation. Works with any TanStack Query adapter (React, Vue, Solid, Svelte).
 
+<Callout type="info">
+This package is used internally by `@rippledb/client-query` to provide a complete data fetching and caching solution. Consider using [client-query](/docs/reference/client-query) for a more integrated experience.
+</Callout>
+
 ## Installation
 
 <Tabs items={['pnpm', 'npm', 'yarn']}>
