--- a/apps/docs/content/docs/internal/adr/0017-ui-integrations-live-in-bind-packages.mdx
+++ b/apps/docs/content/docs/internal/adr/0017-ui-integrations-live-in-bind-packages.mdx
@@ -23,7 +23,7 @@ Responsibilities include:
 - list registry helper
 - coalescing of invalidation bursts
 
-Core packages must not import these.
+Core packages must not import these. For a higher-level experience that combines these bindings with CRUD controllers, see the `@rippledb/client-query` package.
 
 ## Alternatives Considered
 
