--- a/apps/docs/content/docs/internal/adr/0018-package-names-and-responsibilities.mdx
+++ b/apps/docs/content/docs/internal/adr/0018-package-names-and-responsibilities.mdx
@@ -42,6 +42,8 @@ Recommended initial package set:
 ### UI bindings
 
 - `@rippledb/bind-tanstack-query` — invalidation wiring + list registry + coalescing
+- `@rippledb/client-controllers` — Abstract CRUD controllers with batch loading
+- `@rippledb/client-query` — Final application-level DX, combining controllers and UI bindings
 
 ### Future (not v0)
 
