--- a/apps/docs/content/docs/reference/client-query.mdx
+++ b/apps/docs/content/docs/reference/client-query.mdx
@@ -96,9 +96,10 @@ const api = createClientQueryApi({
 });
 ```
 
-## Related
+## Related Packages
 
-- [/docs/adapters/controllers](/docs/adapters/controllers) — CRUD controllers
-- [/docs/adapters/bind-tanstack-query](/docs/adapters/bind-tanstack-query) — TanStack Query invalidation binding
-- [/docs/reference/core](/docs/reference/core) — runtime schema descriptor (`defineSchema`)
+- [@rippledb/core](/docs/reference/core) — runtime schema descriptor (`defineSchema`)
+- [@rippledb/client-controllers](/docs/adapters/controllers) — CRUD controllers
+- [@rippledb/bind-tanstack-query](/docs/adapters/bind-tanstack-query) — TanStack Query invalidation binding
+- [/docs/getting-started/concepts](/docs/getting-started/concepts) — Package relationship diagrams
 
