--- a/apps/docs/content/docs/reference/client.mdx
+++ b/apps/docs/content/docs/reference/client.mdx
@@ -272,8 +272,9 @@ This ensures:
 2. Local changes are reapplied
 3. Conflicts resolve deterministically
 
-## Related
+## Related Packages
 
-- [Remote HTTP](/docs/reference/remote-http) — HTTP transport
-- [Core Reference](/docs/reference/core) — Change types
-- [Server Reference](/docs/reference/server) — Db interface
+- [@rippledb/client-query](/docs/reference/client-query) — Recommended high-level client API
+- [@rippledb/remote-http](/docs/reference/remote-http) — HTTP transport for client-server sync
+- [@rippledb/core](/docs/reference/core) — Change types and HLC utilities
+- [@rippledb/server](/docs/reference/server) — Server-side persistence counterparts
