--- a/apps/docs/content/docs/reference/core.mdx
+++ b/apps/docs/content/docs/reference/core.mdx
@@ -328,6 +328,8 @@ const schemaWithDrizzle = schema.extend('drizzle', {
 
 ## Related
 
+- [client-query](/docs/reference/client-query) — Primary consumer of schema descriptors
+- [client-controllers](/docs/adapters/controllers) — Uses core change types
 - [Core Concepts](/docs/getting-started/concepts) — Understand HLCs and Changes
 - [Server Reference](/docs/reference/server) — Db interface for persistence
 - [Client Reference](/docs/reference/client) — Store interface for local state
