--- a/apps/docs/content/docs/adapters/controllers.mdx
+++ b/apps/docs/content/docs/adapters/controllers.mdx
@@ -10,6 +10,10 @@ import { Callout } from 'fumadocs-ui/components/callout';
 
 Abstract CRUD controllers with automatic batch loading for RippleDB. Provides a high-level data access layer on top of the `Store` interface.
 
+<Callout type="info">
+For a higher-level API that combines these controllers with automatic cache invalidation for TanStack Query, see the [client-query](/docs/reference/client-query) package.
+</Callout>
+
 ## Installation
 
 <Tabs items={['pnpm', 'npm', 'yarn']}>
